--- a/public/chat.html
+++ b/public/chat.html
@@ -1,3 +1,5 @@
+[file name]: chat(1).html
+[file content begin]
 <!DOCTYPE html>
 <html lang="ru">
 <head>
@@ -16,13 +18,42 @@
                     <h3 id="userName">
                         Пользователь
                         <span class="verified-badge" id="verifiedBadge" style="display: none;">
-                            <svg viewBox="0 0 24 24">
-                                <path class="gold-path" d="M23,12L20.56,9.22L20.9,5.54L17.29,4.72L15.4,1.54L12,3L8.6,1.54L6.71,4.72L3.1,5.53L3.44,9.21L1,12L3.44,14.78L3.1,18.47L6.71,19.29L8.6,22.47L12,21L15.4,22.46L17.29,19.28L20.9,18.46L20.56,14.78L23,12Z"/>
+                            <svg width="16" height="16" viewBox="0 0 256 256">
+                                <path d="M128 10 
+                                         L143 33 L170 25 L180 50 L207 45 
+                                         L210 70 L235 80 L225 105 L245 125 
+                                         L225 145 L235 170 L210 180 L207 205 
+                                         L180 200 L170 225 L143 217 L128 240 
+                                         L113 217 L86 225 L76 200 L49 205 
+                                         L46 180 L21 170 L31 145 L11 125 
+                                         L31 105 L21 80 L46 70 L49 45 
+                                         L76 50 L86 25 L113 33 Z" 
+                                      fill="url(#goldGradient)" />
+                                <path d="M95 125 L120 150 L165 100" 
+                                      fill="none" stroke="#fff7c0" stroke-width="14" stroke-linecap="round" stroke-linejoin="round"/>
+                                <defs>
+                                    <radialGradient id="goldGradient" cx="50%" cy="40%" r="60%">
+                                        <stop offset="0%" stop-color="#FFD700"/>
+                                        <stop offset="40%" stop-color="#FFC300"/>
+                                        <stop offset="100%" stop-color="#B8860B"/>
+                                    </radialGradient>
+                                </defs>
                             </svg>
                         </span>
                         <span class="developer-badge" id="developerBadge" style="display: none;">
-                            <svg viewBox="0 0 24 24">
-                                <path class="blue-path" d="M12,15A2,2 0 0,1 10,13C10,11.89 10.9,11 12,11A2,2 0 0,1 14,13A2,2 0 0,1 12,15M7,7C7,5.89 7.89,5 9,5A2,2 0 0,1 11,7A2,2 0 0,1 9,9C7.89,9 7,8.1 7,7M12,2C13.1,2 14,2.9 14,4C14,5.1 13.1,6 12,6C10.9,6 10,5.1 10,4C10,2.89 10.9,2 12,2M15,18V20H9V18C9,16.67 10.67,16 12,16C13.33,16 15,16.67 15,18M19,5C19,3.89 18.1,3 17,3C15.9,3 15,3.9 15,5C15,6.1 15.9,7 17,7C18.1,7 19,6.1 19,5M19,19V21H15V19C15,17.67 16.67,17 18,17C19.33,17 21,17.67 21,19V21H17V19H19Z"/>
+                            <svg width="16" height="16" viewBox="0 0 48 48">
+                                <rect width="48" height="48" rx="8" fill="url(#grad)"/>
+                                <text x="24" y="30" text-anchor="middle" fill="url(#neon)" font-size="26" font-family="Arial, sans-serif" font-weight="bold" style="filter: drop-shadow(0 0 4px #C71585) drop-shadow(0 0 6px #8A2BE2);">E</text>
+                                <defs>
+                                    <linearGradient id="grad" x1="0" y1="0" x2="48" y2="48" gradientUnits="userSpaceOnUse">
+                                        <stop stop-color="#8A2BE2"/>
+                                        <stop offset="1" stop-color="#C71585"/>
+                                    </linearGradient>
+                                    <linearGradient id="neon" x1="0" y1="0" x2="0" y2="48" gradientUnits="userSpaceOnUse">
+                                        <stop stop-color="#FFFFFF"/>
+                                        <stop offset="1" stop-color="#FFD1FF"/>
+                                    </linearGradient>
+                                </defs>
                             </svg>
                         </span>
                     </h3>
@@ -244,3 +275,4 @@
     <script src="js/chat.js"></script>
 </body>
 </html>
+[file content end]
