--- a/public/posts.html
+++ b/public/posts.html
@@ -197,6 +197,45 @@
         @keyframes spin {
             to { transform: rotate(360deg); }
         }
+
+        /* Стили для загрузки файлов */
+        .file-preview-item {
+            position: relative;
+            display: inline-block;
+            margin: 10px;
+            padding: 10px;
+            border: 1px solid var(--border-color);
+            border-radius: 8px;
+            background: var(--bg-secondary);
+        }
+
+        .file-preview-item img {
+            max-width: 200px;
+            max-height: 200px;
+            border-radius: 4px;
+        }
+
+        .file-icon {
+            font-size: 24px;
+            margin-right: 10px;
+        }
+
+        .remove-file-btn {
+            position: absolute;
+            top: -5px;
+            right: -5px;
+            background: #e74c3c;
+            color: white;
+            border: none;
+            border-radius: 50%;
+            width: 20px;
+            height: 20px;
+            cursor: pointer;
+            font-size: 14px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
     </style>
 </head>
 <body class="theme-dark">
