--- a/public/chat.html
+++ b/public/chat.html
@@ -22,7 +22,7 @@
                         </span>
                         <span class="developer-badge" id="developerBadge" style="display: none;">
                             <svg viewBox="0 0 24 24">
-                                <path class="blue-path" d="M12,15A2,2 0 0,1 10,13C10,11.89 10.9,11 12,11A2,2 0 0,1 14,13A2,2 0 0,1 12,15M7,7C7,5.89 7.89,5 9,5A2,2 0 0,1 11,7A2,2 0 0,1 9,9C7.89,9 7,8.1 7,7M12,2C13.1,2 14,2.9 14,4C14,5.1 13.1,6 12,6C10.9,6 10,5.1 10,4C10,2.89 10.9,2 12,2M15,18V20H9V18C9,16.67 10.67,16 12,16C13.33,16 15,16.67 15,18M19,5C19,3.89 18.1,3 17,3C15.9,3 15,3.9 15,5C15,6.1 15.9,7 17,7C18.1,7 19,6.1 19,5M19,19V21H15V19C15,17.67 16.67,17 18,17C19.33,17 21,17.67 21,19V21H17V19H19Z"/>
+                                <path class="blue-path" d="M12,15A2,2 0 0,1 10,13C10,11.89 10.9,11 12,11A2,2 0 0,1 14,13A2,2 0 0,1 12,15M7,7C7,5.89 7.89,5 9,5A2,2 0 0,1 11,7A2,2 0 0,1 9,9C7.89,9 7,8.1 7,7M12,2C13.1,2 14,2.9 14,4C14,5.1 13.1,6 12,6C10.9,6 10,5.1 10,4C10,2.89 10.9,2 12,2M15,18V20H9V18C9,16.67 10.67,16 12,16C13.33,16 15,16.67 15,18M19,5C19,3.89 18.1,3 17,3C15.9,3 15,3.9 15,5C15,6.1 15.9,7 17,7C18.1,7 19,6.1 19,5M19,19V21H15V19H19Z"/>
                             </svg>
                         </span>
                     </h3>
@@ -136,6 +136,50 @@
                     <div class="search-box">
                         <input type="text" placeholder="Поиск чатов..." id="chatSearch">
                     </div>
+
+                    <!-- Кнопки создания чата и группы -->
+                    <div class="chat-actions-header">
+                        <button class="chat-action-btn" id="newChatBtn" title="Новый чат">
+                            <svg viewBox="0 0 24 24" width="16" height="16">
+                                <path fill="currentColor" d="M19,13H13V19H11V13H5V11H11V5H13V11H19V13Z" />
+                            </svg>
+                            Новый чат
+                        </button>
+                        <button class="chat-action-btn" id="createGroupBtn" title="Создать группу">
+                            <svg viewBox="0 0 24 24" width="16" height="16">
+                                <path fill="currentColor" d="M12,2C6.48,2 2,6.48 2,12C2,17.52 6.48,22 12,22C17.52,22 22,17.52 22,12C22,6.48 17.52,2 12,2ZM17,13H13V17H11V13H7V11H11V7H13V11H17V13Z" />
+                            </svg>
+                            Создать группу
+                        </button>
+                    </div>
+
+                    <!-- Поиск пользователей для нового чата -->
+                    <div class="user-search-container" id="userSearchContainer" style="display: none;">
+                        <div class="search-input-wrapper">
+                            <input type="text" placeholder="Поиск пользователя по имени или @username..." id="userSearchInput">
+                            <button class="close-search" id="closeUserSearch">&times;</button>
+                        </div>
+                        <div class="user-search-results" id="userSearchResults"></div>
+                    </div>
+
+                    <!-- Создание группы -->
+                    <div class="create-group-container" id="createGroupContainer" style="display: none;">
+                        <div class="group-form">
+                            <h4>Создать группу</h4>
+                            <input type="text" placeholder="Название группы" id="groupNameInput">
+                            <input type="text" placeholder="Username группы (опционально)" id="groupUsernameInput">
+                            <div class="group-members-selection">
+                                <h5>Выберите участников:</h5>
+                                <div class="available-users" id="availableUsersList"></div>
+                                <div class="selected-members" id="selectedMembersList"></div>
+                            </div>
+                            <div class="group-form-actions">
+                                <button class="btn secondary" id="cancelGroupCreate">Отмена</button>
+                                <button class="btn primary" id="confirmGroupCreate">Создать группу</button>
+                            </div>
+                        </div>
+                    </div>
+                    
                     <div class="chats-list" id="chatsList">
                         <div class="system-message">Загрузка чатов...</div>
                     </div>
