--- a/public/mobile/ecoin.html
+++ b/public/mobile/ecoin.html
@@ -92,6 +92,12 @@
             font-weight: 600;
         }
 
+        .mobile-header-actions {
+            display: flex;
+            align-items: center;
+            gap: 8px;
+        }
+
         /* Основной контент */
         .main-content {
             padding-top: 60px;
@@ -386,6 +392,15 @@
                     </svg>
                 </a>
                 <div class="mobile-header-title">E-COIN</div>
+            </div>
+            <div class="mobile-header-actions">
+                <a href="/mobile" class="mobile-header-btn">
+                    <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                        <rect x="3" y="3" width="18" height="18" rx="2" ry="2"></rect>
+                        <line x1="8" y1="12" x2="16" y2="12"></line>
+                        <line x1="12" y1="8" x2="12" y2="16"></line>
+                    </svg>
+                </a>
             </div>
         </div>
     </div>
