--- a/public/posts.html
+++ b/public/posts.html
@@ -272,14 +272,10 @@
                     <h3 id="userName">
                         Пользователь
                         <span class="verified-badge" id="verifiedBadge" style="display: none;">
-                            <svg viewBox="0 0 24 24">
-                                <path class="gold-path" d="M23,12L20.56,9.22L20.9,5.54L17.29,4.72L15.4,1.54L12,3L8.6,1.54L6.71,4.72L3.1,5.53L3.44,9.21L1,12L3.44,14.78L3.1,18.47L6.71,19.29L8.6,22.47L12,21L15.4,22.46L17.29,19.28L20.9,18.46L20.56,14.78L23,12Z"/>
-                            </svg>
+                            <img src="/assets/verified-developer/verified.png" alt="Verified">
                         </span>
                         <span class="developer-badge" id="developerBadge" style="display: none;">
-                            <svg viewBox="0 0 24 24">
-                                <path class="blue-path" d="M12,15A2,2 0 0,1 10,13C10,11.89 10.9,11 12,11A2,2 0 0,1 14,13A2,2 0 0,1 12,15M7,7C7,5.89 7.89,5 9,5A2,2 0 0,1 11,7A2,2 0 0,1 9,9C7.89,9 7,8.1 7,7M12,2C13.1,2 14,2.9 14,4C14,5.1 13.1,6 12,6C10.9,6 10,5.1 10,4C10,2.89 10.9,2 12,2M15,18V20H9V18C9,16.67 10.67,16 12,16C13.33,16 15,16.67 15,18M19,5C19,3.89 18.1,3 17,3C15.9,3 15,3.9 15,5C15,6.1 15.9,7 17,7C18.1,7 19,6.1 19,5M19,19V21H15V19C15,17.67 16.67,17 18,17C19.33,17 21,17.67 21,19V21H17V19H19Z"/>
-                            </svg>
+                            <img src="/assets/verified-developer/developer.png" alt="Developer">
                         </span>
                     </h3>
                     <div class="username" id="userUsername">@username</div>
