--- a/public/chat.html
+++ b/public/chat.html
@@ -5,6 +5,199 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Сообщения - Epic Messenger</title>
     <link rel="stylesheet" href="styles.css">
+    <style>
+        /* Дополнительные стили для групп */
+        .group-badge {
+            background: var(--accent-color);
+            color: white;
+            padding: 2px 6px;
+            border-radius: 10px;
+            font-size: 10px;
+            margin-left: 5px;
+        }
+
+        .group-badge-small {
+            background: var(--accent-color);
+            color: white;
+            padding: 1px 4px;
+            border-radius: 8px;
+            font-size: 9px;
+            margin-left: 5px;
+        }
+
+        .group-icon {
+            position: absolute;
+            bottom: -2px;
+            right: -2px;
+            background: var(--accent-color);
+            border-radius: 50%;
+            width: 14px;
+            height: 14px;
+            font-size: 8px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
+
+        .group-avatar-icon {
+            position: absolute;
+            bottom: 2px;
+            right: 2px;
+            background: var(--accent-color);
+            border-radius: 50%;
+            width: 16px;
+            height: 16px;
+            font-size: 10px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
+
+        .chat-status {
+            font-size: 11px;
+            color: var(--text-secondary);
+            margin-top: 2px;
+        }
+
+        .chat-actions-header {
+            display: flex;
+            gap: 8px;
+            padding: 10px;
+            border-bottom: 1px solid var(--border-color);
+        }
+
+        .chat-action-btn {
+            display: flex;
+            align-items: center;
+            gap: 6px;
+            padding: 8px 12px;
+            background: var(--accent-color);
+            color: white;
+            border: none;
+            border-radius: 6px;
+            font-size: 12px;
+            cursor: pointer;
+            transition: background-color 0.2s;
+        }
+
+        .chat-action-btn:hover {
+            background: var(--accent-hover);
+        }
+
+        .user-search-container,
+        .create-group-container {
+            border-bottom: 1px solid var(--border-color);
+            padding: 10px;
+        }
+
+        .search-input-wrapper {
+            display: flex;
+            align-items: center;
+            gap: 8px;
+        }
+
+        .search-input-wrapper input {
+            flex: 1;
+            padding: 8px 12px;
+            border: 1px solid var(--border-color);
+            border-radius: 6px;
+            background: var(--bg-secondary);
+            color: var(--text-primary);
+        }
+
+        .close-search {
+            background: none;
+            border: none;
+            color: var(--text-secondary);
+            font-size: 18px;
+            cursor: pointer;
+            padding: 4px;
+        }
+
+        .user-search-results {
+            max-height: 200px;
+            overflow-y: auto;
+            margin-top: 10px;
+        }
+
+        .group-form {
+            display: flex;
+            flex-direction: column;
+            gap: 10px;
+        }
+
+        .group-form input {
+            padding: 8px 12px;
+            border: 1px solid var(--border-color);
+            border-radius: 6px;
+            background: var(--bg-secondary);
+            color: var(--text-primary);
+        }
+
+        .group-members-selection {
+            display: flex;
+            flex-direction: column;
+            gap: 10px;
+        }
+
+        .available-users,
+        .selected-members {
+            max-height: 150px;
+            overflow-y: auto;
+            border: 1px solid var(--border-color);
+            border-radius: 6px;
+            padding: 8px;
+        }
+
+        .available-user-item {
+            display: flex;
+            align-items: center;
+            gap: 10px;
+            padding: 8px;
+            border-radius: 6px;
+            cursor: pointer;
+        }
+
+        .available-user-item:hover {
+            background: var(--hover-color);
+        }
+
+        .user-checkbox input {
+            margin: 0;
+        }
+
+        .selected-member-item {
+            display: flex;
+            align-items: center;
+            gap: 8px;
+            padding: 6px 8px;
+            background: var(--accent-light);
+            border-radius: 4px;
+            margin-bottom: 4px;
+        }
+
+        .remove-member {
+            background: none;
+            border: none;
+            color: var(--text-secondary);
+            cursor: pointer;
+            padding: 2px 6px;
+            margin-left: auto;
+        }
+
+        .group-form-actions {
+            display: flex;
+            gap: 8px;
+            justify-content: flex-end;
+        }
+
+        .message-sender {
+            font-size: 12px;
+            color: var(--accent-color);
+            margin-bottom: 2px;
+            font-weight: 500;
+        }
+    </style>
 </head>
 <body class="theme-dark">
     <!-- Сайдбар -->
@@ -49,7 +242,7 @@
             <a href="/gifts" class="menu-item">
                 <div class="menu-icon">
                     <svg viewBox="0 0 24 24">
-                        <path fill="currentColor" d="M22,12V20A2,2 0 0,1 20,22H4A2,2 0 0,1 2,20V12A1,1 0 0,1 1,11V8A2,2 0 0,1 3,6H6.17C6.06,5.69 6,5.35 6,5A3,3 0 0,1 9,2C10,2 10.88,2.5 11.43,3.24V3.23L12,4L12.57,3.23V3.24C13.12,2.5 14,2 15,2A3,3 0 0,1 18,5C18,5.35 17.94,5.69 17.83,6H21A2,2 0 0,1 23,8V11A1,1 0 0,1 22,12M4,20H11V12H4V20M20,20V12H13V20H20M9,4A1,1 0 0,0 8,5A1,1 0 0,0 9,6A1,1 0 0,0 10,5A1,1 0 0,0 9,4M15,4A1,1 0 0,0 14,5A1,1 0 0,0 15,6A1,1 0 0,0 16,5A1,1 0 0,0 15,4M3,8V10H11V8H3M13,8V10H21V8H13Z"/>
+                        <path fill="currentColor" d="M22,12V20A2,2 0 0,1 20,22H4A2,2 0 0,1 2,22V12A1,1 0 0,1 1,11V8A2,2 0 0,1 3,6H6.17C6.06,5.69 6,5.35 6,5A3,3 0 0,1 9,2C10,2 10.88,2.5 11.43,3.24V3.23L12,4L12.57,3.23V3.24C13.12,2.5 14,2 15,2A3,3 0 0,1 18,5C18,5.35 17.94,5.69 17.83,6H21A2,2 0 0,1 23,8V11A1,1 0 0,1 22,12M4,20H11V12H4V20M20,20V12H13V20H20M9,4A1,1 0 0,0 8,5A1,1 0 0,0 9,6A1,1 0 0,0 10,5A1,1 0 0,0 9,4M15,4A1,1 0 0,0 14,5A1,1 0 0,0 15,6A1,1 0 0,0 16,5A1,1 0 0,0 15,4M3,8V10H11V8H3M13,8V10H21V8H13Z"/>
                     </svg>
                 </div>
                 <div class="menu-text">Подарки</div>
